WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134740
[iOS] caption size is sometimes incorrect in fullscreen
https://bugs.webkit.org/show_bug.cgi?id=134740
Summary
[iOS] caption size is sometimes incorrect in fullscreen
Eric Carlson
Reported
2014-07-08 13:08:30 PDT
The font sized used for captions sometimes does not change immediately when entering full screen.
Attachments
Proposed patch.
(13.48 KB, patch)
2014-07-08 13:34 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2014-07-08 13:34:20 PDT
Created
attachment 234589
[details]
Proposed patch.
Jer Noble
Comment 2
2014-07-08 13:53:58 PDT
Comment on
attachment 234589
[details]
Proposed patch. View in context:
https://bugs.webkit.org/attachment.cgi?id=234589&action=review
r=me
> Source/WebCore/ChangeLog:8 > + Reviewed by NOBODY (OOPS!). > + > + * Modules/mediacontrols/MediaControlsHost.cpp:
Nit: no description of the problem and how this patch fixes it?
Eric Carlson
Comment 3
2014-07-09 10:18:21 PDT
(In reply to
comment #2
)
> (From update of
attachment 234589
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=234589&action=review
> > r=me > > > Source/WebCore/ChangeLog:8 > > + Reviewed by NOBODY (OOPS!). > > + > > + * Modules/mediacontrols/MediaControlsHost.cpp: > > Nit: no description of the problem and how this patch fixes it?
Fixed.
Eric Carlson
Comment 4
2014-07-09 10:18:58 PDT
Committed
r170920
:
http://trac.webkit.org/changeset/170920
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug